syntax = "proto3";

message Bid {
  // product id
  string product_id = 1;

  // initial timestamp
  uint64 timestamp = 2;
  
  // bid price
  uint64 price = 3;

  // owner of the bid - another user
  uint64 agent_id = 4;
}